@@ -84,6 +84,10 @@ Fixed bugs:
    extend Javadoc
    Bugzilla Report 56047
 
+ * TarInputStream will now read archives created by tar
+   implementations that encode big numbers by not adding a trailing
+   NUL.
+
 Other changes:
 --------------
 
